--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,11 +74,10 @@ jobs:
       env:
         TF_ACC: "1"
         TF_ACC_TERRAFORM_VERSION: ${{ matrix.terraform }}
-
-        # Set whatever additional acceptance test env vars here. You can
-        # optionally use data from your repository secrets using the
-        # following syntax:
-        # SOME_VAR: ${{ secrets.SOME_VAR }}
+        SALESFORCE_API_VERSION: "v51.0"
+        SALESFORCE_CLIENT_ID: ${{ secrets.SALESFORCE_CLIENT_ID }}
+        SALESFORCE_PRIVATE_KEY: ${{ secrets.SALESFORCE_PRIVATE_KEY }}
+        SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
 
       run: |
         go test -v -cover ./internal/provider/
