--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ website/vendor
 !command/test-fixtures/**/*.tfstate
 !command/test-fixtures/**/.terraform/
 
+# Template exclusions
+!templates/
+
 # Keep windows files with windows line endings
 *.winfile eol=crlf
