--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ env:
   GOPROXY: https://proxy.golang.org/
   PROTOCOL_VERSION: "6.0"
   PROTOCOL_VERSIONS: "6.0"
+  SIGNER: interim_signing_subkey_7685B676
 
 jobs:
   Release:
@@ -30,15 +31,14 @@ jobs:
           go-version: ${{ steps.go-version.outputs.content }}
       - uses: hashicorp/setup-hc-releases@v1
         with:
-          github_token: ${{ secrets.HC_RELEASES_TOKEN }}
+          github-token: ${{ secrets.HC_RELEASES_TOKEN }}
+          signer: ${{ env.SIGNER }}
       - uses: hashicorp/setup-signore@v1
         with:
-          client-id: ${{ secrets.SIGNORE_CLIENT_ID }}
-          client-secret: ${{ secrets.SIGNORE_CLIENT_SECRET }}
           github-token: ${{ secrets.SETUP_SIGNORE_GITHUB_TOKEN }}
           signer: interim_signing_subkey_768B676
       - name: Release Notes
-        run: sed -n -e "1{/# /d;}" -e "2{/^$/d;}" -e "/# $(git describe --abbrev=0 --exclude="$(git describe --abbrev=0 --match='v*.*.*' --tags)" --match='v*.*.*' --tags | tr -d v)/q;p" CHANGELOG.md > /tmp/RELEASE-NOTES.md
+        run: sed -n -e "1{/# /d;}" -e "2{/^$/d;}" -e "/# \[$(git describe --abbrev=0 --exclude="$(git describe --abbrev=0 --match='v*.*.*' --tags)" --match='v*.*.*' --tags | tr -d v)/q;p" CHANGELOG.md > /tmp/RELEASE-NOTES.md
       - name: Release Protocol Versions
         run: |
           manifestFile=${{ github.event.repository.name }}_manifest.json
@@ -54,17 +54,20 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.TF_PROVIDER_RELEASE_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.TF_PROVIDER_RELEASE_AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+          aws-region: us-east-1
           role-to-assume: ${{ secrets.TF_PROVIDER_RELEASE_AWS_ROLE_ARN }}
-          role-session-name: ${{ github.run_id }}
+          role-duration-seconds: 3600
+          # TODO: allow session tagging once IAM permission changes addressed
+          # Reference: https://github.com/hashicorp/hc-releases/issues/124
+          role-skip-session-tagging: true
       - name: goreleaser release
         uses: goreleaser/goreleaser-action@v2
         with:
           args: release --release-notes /tmp/RELEASE-NOTES.md --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PROTOCOL_VERSION: ${{ env.PROTOCOL_VERSION }}
-          PROTOCOL_VERSIONS: ${{ env.PROTOCOL_VERSIONS }}
+          SIGNORE_CLIENT_ID: ${{ secrets.SIGNORE_CLIENT_ID }}
+          SIGNORE_CLIENT_SECRET: ${{ secrets.SIGNORE_CLIENT_SECRET }}
       - name: hc-releases publish
         run: hc-releases publish -product=${{ github.event.repository.name }}
         env:
