--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
         TF_ACC: "1"
         TF_ACC_TERRAFORM_VERSION: ${{ matrix.terraform }}
         SALESFORCE_API_VERSION: "53.0"
-        SALESFORCE_IS_SANDBOX_ORG: "1"
+        SALESFORCE_LOGIN_URL: "https://test.salesforce.com"
         SALESFORCE_CLIENT_ID: ${{ secrets.SALESFORCE_CLIENT_ID }}
         SALESFORCE_PRIVATE_KEY: ${{ secrets.SALESFORCE_PRIVATE_KEY }}
         SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
