--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,14 +17,12 @@ builds:
       - arm
       - arm64
     ignore:
-      - goos: darwin
-        goarch: '386'
-      - goos: darwin
-        goarch: arm
-      - goos: darwin
-        goarch: arm64
-      - goos: freebsd
-        goarch: arm64
+      - goarch: arm
+        goos: windows
+      - goarch: arm64
+        goos: freebsd
+      - goarch: arm64
+        goos: windows
     ldflags:
       - -s -w -X internal/provider.Version={{.Version}}
     mod_timestamp: '{{ .CommitTimestamp }}'
