--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v4.0.0
       with:
         go-version: '1.16'
+        cache: false
       id: go
 
     - name: Check out code into the Go module directory
@@ -61,6 +62,7 @@ jobs:
       uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v4.0.0
       with:
         go-version: '1.16'
+        cache: false
       id: go
 
     - name: Check out code into the Go module directory
